--- a/Web.Statu/Views/Data/CreateAdv.cshtml
+++ b/Web.Statu/Views/Data/CreateAdv.cshtml
@@ -58,7 +58,7 @@
                 <div class="col-sm-10">
                     @Html.TextBoxFor(m => m.datasetId, new { @class = "form-control" })
                     <span class="help-block"><span class="text-danger">Povinné.</span></span>
-                    <span class="help-block">Omezení: musí být alespoň 5 znaků a max. 125 znaků dlouhé. Nesmí obsahovat znaky #, \, /, *, ?, ", <,>, |, [, ]. Pokud některé z těchto pravidel nedodrží, je jméno upraveno při uloženís.</span>
+                    <span class="help-block">Omezení: musí být alespoň 5 znaků a max. 125 znaků dlouhé. Nesmí obsahovat znaky #, \, /, *, ?, ", &lt;,&gt;, |, [, ]. Pokud některé z těchto pravidel nedodrží, je jméno upraveno při uloženís.</span>
                 </div>
             </div>
 
