--- a/Web.Statu/Views/Data/NoAccess.cshtml
+++ b/Web.Statu/Views/Data/NoAccess.cshtml
@@ -24,7 +24,7 @@
     <div class="col-xs-12">
         <h3>Problém</h3>
         <p>
-            K tomuto datasetu nemáte přístup. <a href="/data/Index/@ViewBag.DatasetId">Kontaktujte autora</a> a požádejte ho o spolupráci. V případě jeho nedostupnosti <a href="/texty/kontakt"></a>napište nám</a>.
+            K tomuto datasetu nemáte přístup. <a href="/data/Index/@ViewBag.DatasetId">Kontaktujte autora</a> a požádejte ho o spolupráci. V případě jeho nedostupnosti <a href="/texty/kontakt">napište nám</a>.
         </p>
         <a href="/data" class="btn btn-primary">Vytvořit s JSON Schema</a>
     </div>
