--- a/Web.Statu/Views/Home/PridatPolitika.cshtml
+++ b/Web.Statu/Views/Home/PridatPolitika.cshtml
@@ -16,7 +16,7 @@
 {
     <ol class="breadcrumb">
         <li><a href="/">Hlídač Státu</a></li>
-        <li><a href="@Url.Action("Osoby","Home")">Hlídač Osob</a></li>
+        <li><a href="@Url.Action("Index", "Osoby")">Hlídač Osob</a></li>
         <li class="active">@ViewBag.Title</li>
     </ol>
     }
