--- a/Web.Statu/Views/Insolvence/_OddilDokumenty.cshtml
+++ b/Web.Statu/Views/Insolvence/_OddilDokumenty.cshtml
@@ -33,7 +33,7 @@
                     <a href="@Url.Action("TextDokumentu", "Insolvence", new { Id = item.Id, qs=Request.QueryString["qs"] })"><i class="far fa-lg fa-file-alt" alt="textová podoba dokumentu"></i></a>
                 }
             </td>
-            <td style="width:80px"><a href="@item.Url"><i class="far fa-lg fa-file-pdf" alt="Originál"></a></td>
+            <td style="width:80px"><a href="@item.Url"><i class="far fa-lg fa-file-pdf" alt="Originál"></i></a></td>
         </tr>
             if (hlres != null)
             {
