--- a/Web.Statu/Views/Data/CreateSimple2.cshtml
+++ b/Web.Statu/Views/Data/CreateSimple2.cshtml
@@ -102,7 +102,7 @@
                     <tr>
                         <td>Sloupec</td>
                         <td>
-                            Název sloupce</br>
+                            Název sloupce<br />
                             v CSV
                         </td>
                         <td>
