--- a/Web.Statu/Views/Home/KapacitaKazdeNemocnice_child.cshtml
+++ b/Web.Statu/Views/Home/KapacitaKazdeNemocnice_child.cshtml
@@ -277,7 +277,7 @@ if (jipKapacita10p + luzkaO2Kapacita10p + ecmo10p + upv10p > 0)
         <div class="clearfix "></div>
 
         <div class="col-xs-12 col-sm-6 singlebox">
-            <h4>Přístroje ECMO <small>podpora nejvaznejsich pripadu, plicni rizeni</small></h4>
+            <h4>Přístroje ECMO <small>podpora nejvážnějších případů, plicní řízení</small></h4>
 
             <p>
                 Celkem @h.ecmo_kapacita_celkem, volných: @h.ecmo_kapacita_volna (@HlidacStatu.Util.RenderData.NicePercent(h.ecmo_kapacita_perc()))
@@ -299,7 +299,7 @@ if (jipKapacita10p + luzkaO2Kapacita10p + ecmo10p + upv10p > 0)
         <div class="clearfix hidden-md hidden-lg"></div>
 
         <div class="col-xs-12 col-sm-6 singlebox">
-            <h4>Přístroje UPV <small>Umělá plicni ventilace</small></h4>
+            <h4>Přístroje UPV <small>umělá plicní ventilace</small></h4>
             <p>
                 Celkem @h.upv_kapacita_celkem, volných: @h.upv_kapacita_volna (@HlidacStatu.Util.RenderData.NicePercent(h.upv_kapacita_perc()))
                 @*<br />
