--- a/Web.Statu/Views/Home/KapacitaNemocnic_child.cshtml
+++ b/Web.Statu/Views/Home/KapacitaNemocnic_child.cshtml
@@ -362,7 +362,7 @@ var chartdata = timedata.Select(m => new
 
 
     <div class="col-xs-12 col-sm-6 singlebox">
-        <h4>Přístroje ECMO <small>podpora nejvaznejsich pripadu, plicni rizeni</small></h4>
+        <h4>Přístroje ECMO <small>podpora nejvážnějších případů, plicní řízení</small></h4>
 
         <p>
             Celkem @h.ECMO_celkem, volných: @h.ECMO_volna (@HlidacStatu.Util.RenderData.NicePercent(h.ECMO_perc()))
@@ -384,7 +384,7 @@ var chartdata = timedata.Select(m => new
     <div class="clearfix hidden-md hidden-lg"></div>
 
     <div class="col-xs-12 col-sm-6 singlebox">
-        <h4>Přístroje UPV <small>Umělá plicni ventilace</small></h4>
+        <h4>Přístroje UPV <small>umělá plicní ventilace</small></h4>
         <p>
             Celkem @h.UPV_celkem, volných: @h.UPV_volna (@HlidacStatu.Util.RenderData.NicePercent(h.UPV_perc()))
             <br />
