--- a/Web.Statu/Views/Shared/_Layout.cshtml
+++ b/Web.Statu/Views/Shared/_Layout.cshtml
@@ -186,6 +186,11 @@
 
     </script>
 
+    <link href="/scripts/select2.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/scripts/select2-bootstrap.min.css">
+    <script src="/scripts/select2.full.min.js"></script>
+
+
 
 </head>
 <body class="new-body">
@@ -335,7 +340,7 @@
             <!-- desktop menu items only -->
 
             <div class="header__search">
-                <form class="header__search__input-wrapper" method="get">
+                <form class="header__search__input-wrapper old-search-input" method="get">
                     <input value="@ViewBag.Query" id="Q" name="Q" type="text" class="header__search__input" placeholder="Smluvní strana, Název instituce, Jméno osoby, IČO, téma smlouvy …">
                     @if (ViewBag.AdditionalForm != null && false)
                     {
@@ -349,10 +354,37 @@
                         <button class="header__search__btn" formaction="/hledat">Hledat</button>
                     }
                 </form>
+
+                <form id="new-search-input" class="new-search-input" action="/hledat" method="get">
+                    <div class="select2-wrapper">
+                        <div class="input-group input-group-lg">
+                            <select class="form-control input-lg select2-multiple" id="autocomsearch" name="q" multiple="multiple">
+                                @if (!string.IsNullOrWhiteSpace(ViewBag.Query))
+                                {
+                                    foreach (string option in ViewBag.Query.ToString().Split(' '))
+                                    {
+                                        <option value="@option" selected="selected">@option</option>
+                                    }
+                                }
+                            </select>
+                            <span class="input-group-btn">
+                                <button class="btn btn-primary" data-select2-open="autocomsearch" style="left:-7px"> hledat</button>
+                            </span>
+                            
+                        </div>
+                    </div>
+                </form>
+
                 <div>
                     <a class="header__search__hint" style="padding-top:2px;font-size:15px;text-decoration:none;padding-top:2px;font-size:15px;text-decoration:none;" href="/napoveda">
                         <i class="far fa-question-square" style=""></i> Nápověda jak vyhledávat
                     </a>
+                    <button class="header__search__hint btn btn-link new-search-input" style="margin-left: 5px; text-decoration: none; padding-top: 2px; font-size: 15px;">
+                        <i class="fas fa-blind"></i> Staré hledání
+                    </button>
+                    <button class="header__search__hint btn btn-link old-search-input" style="margin-left: 5px; text-decoration: none; padding-top: 2px; font-size: 15px;">
+                        <i class="fas fa-baby"></i> Nové hledání
+                    </button>
                     <a class="header__search__hint pull-right" style="" href="/snadnehledani">
                         Snadné hledání
                     </a>
