--- a/Web.Statu/Views/Beta/Search.cshtml
+++ b/Web.Statu/Views/Beta/Search.cshtml
@@ -7,6 +7,7 @@
 {
     <link href="/scripts/select2.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="/scripts/select2-bootstrap.min.css">
+    <link rel="stylesheet" href="/Content/select2-search-over.css">
     <script src="/scripts/select2.full.min.js"></script>
 
     <script>
