--- a/Web.Statu/Views/Beta/Search.cshtml
+++ b/Web.Statu/Views/Beta/Search.cshtml
@@ -19,7 +19,7 @@
                 minimumInputLength: 2,
                 tags: true,
                 dataType: 'json',
-                placeholder: 'Zadejte dotaz',
+                placeholder: 'Zadejte dotaz, jméno úřadu, firmy, politika',
                 language: {
                     inputTooShort: function () {
                         return 'Prosím, zadejte alespoň 2 znaky';
