--- a/Web.Statu/Views/Shared/_Layout.cshtml
+++ b/Web.Statu/Views/Shared/_Layout.cshtml
@@ -377,15 +377,15 @@
                 </form>
 
                 <div>
+                <button class="header__search__hint btn btn-link new-search-input" style="margin-right: 5px; text-decoration: none; padding-top: 2px; font-size: 15px;color:#FFBF66">
+                    <i class="fas fa-blind"></i> Přepnout na původní hledání
+                </button>
+                <button class="header__search__hint btn btn-link old-search-input" style="margin-right: 5px; text-decoration: none; padding-top: 2px; font-size: 15px;color:#FFBF66">
+                    <i class="fas fa-baby"></i> Přepnout na nové hledání
+                </button>
                     <a class="header__search__hint" style="padding-top:2px;font-size:15px;text-decoration:none;padding-top:2px;font-size:15px;text-decoration:none;" href="/napoveda">
                         <i class="far fa-question-square" style=""></i> Nápověda jak vyhledávat
                     </a>
-                    <button class="header__search__hint btn btn-link new-search-input" style="margin-left: 5px; text-decoration: none; padding-top: 2px; font-size: 15px;">
-                        <i class="fas fa-blind"></i> Staré hledání
-                    </button>
-                    <button class="header__search__hint btn btn-link old-search-input" style="margin-left: 5px; text-decoration: none; padding-top: 2px; font-size: 15px;">
-                        <i class="fas fa-baby"></i> Nové hledání
-                    </button>
                     <a class="header__search__hint pull-right" style="" href="/snadnehledani">
                         Snadné hledání
                     </a>
